# brightly

./: .gitignore  CMakeLists.txt  LICENSE.rtf  LICENSE.txt  Makefile  README.md  brightly.c  brightly.rc  brightly.wxs  build-installer.cmd  build.cmd  monitor.c  monitor.h  test.cmd  update-docs.cmd
docs/: index.html
